--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,11 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.7.3</version>
 		</dependency>
-
-
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<jersey.version>2.16</jersey.version>
