--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,9 @@
 			<version>5.1.0.Final</version>
 		</dependency>
 		<dependency>
-			<groupId>postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>9.1-901-1.jdbc4</version>
+		  <groupId>org.postgresql</groupId>
+		  <artifactId>postgresql</artifactId>
+		  <version>9.4.1208</version>
 		</dependency>
 	</dependencies>
 	<properties>
