--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 		  <artifactId>postgresql</artifactId>
 		  <version>9.4.1208</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>1.21.0</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<jersey.version>2.16</jersey.version>
